# name: TestPushStatus.test[uvloop-None]
  <class 'dict'> {
    'error': None,
    'progress': 23,
    'stage': 'build',
    'state': 'running',
    'step_description': None,
    'step_name': None,
    'timestamp': '2015-10-06T20:00:00Z',
  }
---
# name: TestPushStatus.test_bad_state[uvloop]
  <class 'dict'> {
    'errors': <class 'dict'> {
      'state': <class 'list'> [
        'unallowed value bad',
      ],
    },
    'id': 'invalid_input',
    'message': 'Invalid input',
  }
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-valid]
  <class 'tuple'> (
    201,
    <class 'dict'> {
      'error': <class 'dict'> {
        'details': <class 'list'> [
          'Valid',
        ],
        'traceback': <class 'list'> [
          'Valid',
        ],
        'type': 'KeyError',
      },
      'progress': 14,
      'stage': 'fastqc',
      'state': 'error',
      'step_description': None,
      'step_name': None,
      'timestamp': '2015-10-06T20:00:00Z',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_missing_error[uvloop]
  <class 'tuple'> (
    400,
    <class 'dict'> {
      'id': 'bad_request',
      'message': 'Missing error information',
    },
  )
---
# name: TestPushStatus.test_name_and_description[uvloop]
  <class 'dict'> {
    'error': None,
    'progress': 14,
    'stage': 'fastqc',
    'state': 'running',
    'step_description': 'Run FastQC on the raw data',
    'step_name': 'FastQC',
    'timestamp': '2015-10-06T20:00:00Z',
  }
---
# name: test_acquire[uvloop-None]
  <class 'dict'> {
    'acquired': True,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'key': 'key',
    'mem': 16,
    'proc': 10,
    'progress': 3,
    'stage': None,
    'state': 'preparing',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0.091,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1.0,
        'stage': 'import_results',
        'state': 'complete',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 3,
        'stage': None,
        'state': 'preparing',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
    'workflow': 'build_index',
  }
---
# name: test_cancel[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'mem': 16,
    'proc': 10,
    'progress': 0.091,
    'stage': 'mk_analysis_dir',
    'state': 'running',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0.091,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
    'workflow': 'build_index',
  }
---
# name: test_find[uvloop-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 3,
        'create_sample': 1,
        'nuvs': 3,
      },
      'complete': <class 'dict'> {
        'aodp': 1,
        'build_index': 1,
        'create_sample': 1,
        'create_subtraction': 1,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'aodp': 1,
        'nuvs': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'id': 'b8r738m6',
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'id': 'ffd29tzv',
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'id': 'dc4lumlx',
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'id': 'r5j2tazo',
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'id': 'ar5il5gu',
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'id': '2qcls7dt',
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'id': 't3t8vvqv',
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'aodp',
      },
      <class 'dict'> {
        'id': 'ukggwxrd',
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'id': '7467tozj',
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'id': '6v8uqx97',
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'id': 'levmgajz',
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'aodp',
      },
      <class 'dict'> {
        'id': 'l3dfzbu6',
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'id': 'yawvuon9',
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'id': 'a8geh27a',
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'id': 'djhxmgsb',
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
    ],
  }
---
# name: test_find[uvloop-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 3,
        'create_sample': 1,
        'nuvs': 3,
      },
      'complete': <class 'dict'> {
        'aodp': 1,
        'build_index': 1,
        'create_sample': 1,
        'create_subtraction': 1,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'aodp': 1,
        'nuvs': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'id': 'ar5il5gu',
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'id': 't3t8vvqv',
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'aodp',
      },
      <class 'dict'> {
        'id': 'yawvuon9',
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
    ],
  }
---
# name: test_get[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'mem': 16,
    'proc': 10,
    'progress': 1.0,
    'stage': 'import_results',
    'state': 'complete',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0.091,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1.0,
        'stage': 'import_results',
        'state': 'complete',
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
    'workflow': 'build_index',
  }
---
